# prediction-arbs

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  event_registry.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: arb.db
examples/: demo.ipynb
src/arbscan/: __init__.py  alerts.py  dashboard.py  db.py  edge.py  fees.yaml  kalshi_client.py  main.py  market_schema.py  matcher.py  nadex_client.py  normalizer.py  predictit_client.py  run_dashboard.py  sizing.py
tests/: __init__.py  test_alerts.py  test_cli.py  test_dashboard_import.py  test_db.py  test_docker.py  test_edge.py  test_kalshi_client.py  test_market_schema.py  test_matcher.py  test_nadex_client.py  test_normalizer.py  test_predictit_client.py  test_sanity.py  test_sizing.py
tests/fixtures/: kalshi_example.json  nadex_example.json  predictit_example.json
